[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-rl-env"
version = "0.1.0"
description = "A Gymnasium-compatible RL environment for training voice synthesis models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.1.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.entry-points."gymnasium.envs"]
__root__ = "voice_rl_env.registration:register_envs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
